force-app/main/default/objects/ConstructionZone__c/ConstructionZone__c.object-meta.xml
<CustomObject>
    <label>工事区分</label>
    <nameField>
        <label>工区名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>