force-app/main/default/objects/ConstructionZone__c/fields/ConstructionZoneNo__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZoneNo__c</fullName>
    <label>工区No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>