force-app/main/default/objects/ConstructionZone__c/fields/ConstructionZoneNumber_Text__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZoneNumber_Text__c</fullName>
    <formula>&quot;工区&quot;  &amp;   TEXT(ConstructionZoneNo__c)</formula>
    <label>工区番号</label>
    <type>Text</type>
</CustomField>