force-app/main/default/objects/ConstructionZone__c/fields/CorrectionFactor__c.field-meta.xml
<CustomField>
    <fullName>CorrectionFactor__c</fullName>
    <label>補正係数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>機器製作のみを行う：0.5</fullName>
            </value>
            <value>
                <fullName>機器を支給する：0.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>