force-app/main/default/objects/ConstructionZone__c/fields/equipManageCostRate__c.field-meta.xml
<CustomField>
    <fullName>equipManageCostRate__c</fullName>
    <label>補正前機器管理費率</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>