force-app/main/default/objects/ConstructionZone__c/fields/equipManageCostRateCoefficient__c.field-meta.xml
<CustomField>
    <fullName>equipManageCostRateCoefficient__c</fullName>
    <label>機器管理費率補正係数</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>