force-app/main/default/objects/ConstructionZone__c/fields/MachineControlAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount__c</fullName>
    <label>機器管理費(自動計算)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>