force-app/main/default/objects/ConstructionZone__c/fields/MachineControlAmount_floor__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount_floor__c</fullName>
    <formula>FLOOR(MachineControlAmount_formula__c / 1000) * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>機器管理費(千円未満切り捨て)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>