force-app/main/default/objects/ConstructionZone__c/fields/MachineControlAmount_formula__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount_formula__c</fullName>
    <formula>IF(ISBLANK( MachineControlAmount_free__c ), MachineControlAmount__c , MachineControlAmount_free__c )</formula>
    <label>機器管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>