force-app/main/default/objects/ConstructionZone__c/fields/MachineControlAmount_free__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount_free__c</fullName>
    <label>機器管理費(手入力)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>