force-app/main/default/objects/ConstructionZone__c/fields/MachineControlAmountName__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmountName__c</fullName>
    <inlineHelpText>空欄の場合は「機器管理費」と印字される。</inlineHelpText>
    <label>機器管理費名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>