force-app/main/default/objects/ConstructionZone__c/fields/MachineControlRate__c.field-meta.xml
<CustomField>
    <fullName>MachineControlRate__c</fullName>
    <label>機器管理費率</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>