force-app/main/default/objects/ConstructionZone__c/fields/MachineUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount__c</fullName>
    <label>機器管理費対象合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>