force-app/main/default/objects/ConstructionZone__c/fields/MachineUnitAmount_ExceptSum__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_ExceptSum__c</fullName>
    <label>機器単体費対象外合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>