force-app/main/default/objects/ConstructionZone__c/fields/MachineUnitAmount_OnlyTarget__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_OnlyTarget__c</fullName>
    <label>機器単体費(見積対象分のみ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>