force-app/main/default/objects/ConstructionZone__c/fields/MachineUnitAmountName__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmountName__c</fullName>
    <inlineHelpText>空欄の場合は「機器単体費」と印字される</inlineHelpText>
    <label>機器単体費名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>