force-app/main/default/objects/ConstructionZone__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>見積</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>工事区分</relationshipLabel>
    <relationshipName>ConstructionZones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>