force-app/main/default/objects/ConstructionZone__c/fields/removeSuppliesMachineUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>removeSuppliesMachineUnitAmount__c</fullName>
    <description>支給品や移設品、製作のみ以外の機器単体費（見積対象外も含む）</description>
    <inlineHelpText>支給品や移設品、製作のみ以外の機器単体費（見積対象外も含む）</inlineHelpText>
    <label>機器単体費（見積対象外も含む）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>