force-app/main/default/objects/ConstructionZone__c/validationRules/MachineControlAmountReasonCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MachineControlAmountReasonCheck</fullName>
    <active>true</active>
    <description>機器管理費が手入力されている場合、その根拠の入力を必須化する</description>
    <errorConditionFormula>AND(NOT(ISBLANK(MachineControlAmount_free__c )), ISBLANK( MachineControlAmount_Reason__c ) )</errorConditionFormula>
    <errorDisplayField>MachineControlAmount_free__c</errorDisplayField>
    <errorMessage>機器管理費を手入力する場合、価格設定根拠を入力してください。</errorMessage>
</ValidationRule>